# research-harness

./: .env.example  .gitignore  .mcp.json  README.md  TODO.md  autore  autore-bench  run_example.py  setup.cfg
challenges/: __init__.py
challenges/prediction_market/: __init__.py  evaluator.py  interface.py  spec.md
docs/: architecture.md  gen_overview_diagram.py  gen_sequence_diagram.py  long_running_tasks.md  schema.md
eval_outputs/: core_summary.json  edge_summary.json
examples/: README.md  goals.txt
examples/corpus/: research_corpus.json
prompts/: critic_agent.md  harness_debugger.md  hypothesis_agent.md  literature_agent.md  synthesis_agent.md
research_harness/: __init__.py  agents.py  benchmark.py  cli.py  diagnostics.py  evals.py  llm.py  loops.py  model_catalog.py  orchestrator.py  run_benchmarks.py  schemas.py  search.py  sessions.py  store.py  terminal_bench.py
research_harness/evals/: __init__.py  cli.py  harness.py  suites.py  trajectory.py  types.py
research_harness/migrations/: 0001_world_model.sql
services/: README.md  agentcash.md  mpp-dev.md  orthogonal.md
skills/agent-skill-authoring/: SKILL.md
skills/branding-generator/: SKILL.md
skills/challenge-adapter/: SKILL.md
skills/evaluation-harness-design/: SKILL.md
skills/generated-artifact-guard/: SKILL.md
skills/no-predefined-agent-trajectories/: SKILL.md
skills/optimization-output-contract/: SKILL.md
skills/research-agent-architecture/: SKILL.md
skills/research-run-grounding/: SKILL.md
skills/update-architecture/: SKILL.md
tests/: test_smoke.py  test_terminal_bench.py
(+414 files in other folders)
