[metadata]
name = research-harness
version = 0.1.0
description = Research-first multi-agent harness MVP with deterministic and fan-out/fan-in execution.

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.entry_points]
console_scripts =
    research-harness = research_harness.cli:main
    autore = research_harness.cli:main
    autore-bench = research_harness.benchmark:main
    autore-eval = research_harness.evals:main
